R package 'mnormt' history file
-------------------------------
2005-nov. : built private version
2006-01-23: 1.0-0 first version uploaded on CRAN
2006-04-26: 1.0-1 fixed a bug of non-compliance to R programming standards
2006-10-09: 1.1-0 adopt amedend Fortran code of Alan Genz (subtroutine TRESTR)
2006-10-26: 1.2-0 fixed a bug in function rmt
2007-03-16: 1.2-1 some amendments in documentation
2008-06-12: 1.3-0 added Fortran code for the bivariate case; improved R coding
2009-01-26: 1.3-2 minor modification to F77 code to avoid GOTO outside IF block
2009-03-21: 1.3-3 romoved check on the R version, at request of the R Core team
2009-11-25: 1.3-4 fixed a bug affecting the case d>2 & df=Inf
2011-01-16: 1.4-0 pd.solve() introduced; argument 'mean' can now be a matrix
2011-04-06: 1.4-1 fixed documentation, coding of dmnorm & dmt is straightened,
                  log.det in pd.solve() provided only on request   
2011-04-28: 1.4-2 fixed bug of biv.not.prob if some (lower=-Inf & upper=Inf)
2011-05-03: 1.4-3 fixed bug as above for sadmvn and sadmvt
2012-01-06: 1.4-5 NAMESPACE introduced on request from R Core Team
2013-12-04: 1.4-7 .First.lib() removed on request from CRAN, other minor fixes
2014-06-25: 1.5-0 improved coding of dmnorm and dmt functions (avoids 'apply'),
                  allow calling pmnorm and pmt with a matrix argument 'x'
2014-06-30: 1.5-1 fixes a bug of parameter checking in dmnorm and dmt
2015-04-02: 1.5-2 new argument 'sqrt' of dmnorm and dmt, also limited check of 
                  the arguments is introduced (skipped earlier for speed)