@@ -1,6 +1,6 @@
 Package: mnormt
-Version: 1.5-2
-Date: 2015-04-02
+Version: 1.5-3
+Date: 2015-05-25
 Title: The Multivariate Normal and t Distributions
 Author: Fortran code by Alan Genz, R code by Adelchi Azzalini 
 Maintainer: Adelchi Azzalini <adelchi.azzalini@unipd.it>
@@ -13,6 +13,6 @@ Description: Functions are provided for computing the density and the
 License: GPL-2 | GPL-3
 URL: http://azzalini.stat.unipd.it/SW/Pkg-mnormt
 NeedsCompilation: yes
-Packaged: 2015-04-02 13:12:49 UTC; aa
+Packaged: 2015-05-25 13:36:39 UTC; aa
 Repository: CRAN
-Date/Publication: 2015-04-03 10:03:39
+Date/Publication: 2015-05-25 18:31:32
