@@ -1,12 +1,11 @@
 18810669f13b87348459e611d31ab760 *COPYING
-2ca3c4558ce3b9ea4184d1aeef435c19 *DESCRIPTION
-1dd2a7082fe30724bf4731703ff32395 *INDEX
+1985bfbf134617635c135f5894968f53 *DESCRIPTION
 d54f7064857ff89e28bbba70f5d41a3a *NAMESPACE
-2efaad810d37267e18e8b556970ee58e *NEWS
-2166c6a49b15ff1e30592050970b7f89 *R/mnormt.R
+b7754f1d8a9c79951f2f91e9a76ce783 *NEWS
+c16d06abf3815de670e7785071116587 *R/mnormt.R
 acf543d09605f55363662a1e614dc70e *inst/CITATION
-8688f937c98610efe41010dddb880aa1 *man/dmnorm.Rd
-a9976bbdea32ec91496229602b750270 *man/dmt.Rd
+fe71e352e681f36f5848038f1611f74c *man/dmnorm.Rd
+353fe1822de9eea3cd8dd485adc18fea *man/dmt.Rd
 814168462e5c1ac9d4388eb596916aa5 *man/mnormt-package.Rd
 b1f29413865c54b2dd1c76db83e69ff1 *man/pd.solve.Rd
 14a1ea67fa6b572f459b30703ed47bb4 *src/biv-nt.f
